[project]
name = "stranalyzer"
version = "1.0.0"
description = "A comprehensive toolkit for analyzing and comparing trading strategies"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Gianluca Pagliara", email = "pagliara.gianluca@gmail.com" }]
dependencies = [
    "plotly>=6.0.0,<7.0.0",
    "streamlit>=1.41.1,<2.0.0",
    "pandas>=2.3.0,<3.0.0",
    "quantstats>=0.0.64,<0.1.0",
    "quantstats-lumi>=1.0.1,<2.0.0",
    "numpy>=1.24.0,<2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "black>=23.11.0,<24.0.0",
    "isort>=5.12.0,<6.0.0",
    "mypy>=1.7.0,<2.0.0",
    "safety>=3.0.0,<4.0.0",
    "pre-commit>=3.5.0,<4.0.0",
    "ruff>=0.8.4,<0.9.0",
    "pytest-asyncio<0.25.0",
]

[build-system]
requires = ["hatchling>=1.21.1"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
strict = true
disallow_untyped_decorators = false
ignore_missing_imports = true
disable_error_code = ["misc"]
exclude = ["tests/.*"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP"   # pyupgrade
]
ignore = [
    "E203",  # See https://github.com/psf/black/issues/315
    "E501"   # Line too long (handled by black)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Ignore unused imports in __init__ files
